# qa_guru_lesson_17

./: README.md  const.py  pyproject.toml  requirements.txt
resources/schemas/: method_post_clerk_link_pro_schema.json
tests/del_user_by_id/: test_reqres_method_del_user_by_id.py
tests/get_user_by_id/: test_reqres_method_get_user_by_id.py
tests/get_users/: method_get_users_schema.json  test_reqres_method_get_user_by_id.py  test_reqres_method_get_users.py
tests/post_clerk_link_pro/: test_reqres_method_post_clerk_link_pro.py
tests/put_user_by_id/: method_put_user_by_id_schema.json  test_reqres_method_put_user_by_id.py
utils/: path_helpers.py
